// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PERSPECTIVE_SCALE > should export complete perspective scale 1`] = `
{
  "0": 0,
  "100": 100,
  "1000": 1000,
  "200": 200,
  "300": 300,
  "400": 400,
  "500": 500,
  "600": 600,
  "700": 700,
  "800": 800,
  "900": 900,
}
`;

exports[`ROTATE_MAP > should export complete rotate map 1`] = `
{
  "0": 0,
  "1": 1,
  "12": 12,
  "180": 180,
  "2": 2,
  "3": 3,
  "45": 45,
  "6": 6,
  "90": 90,
}
`;

exports[`SCALE_MAP > should export complete scale map 1`] = `
{
  "0": 0,
  "100": 1,
  "105": 1.05,
  "110": 1.1,
  "125": 1.25,
  "150": 1.5,
  "200": 2,
  "50": 0.5,
  "75": 0.75,
  "90": 0.9,
  "95": 0.95,
}
`;

exports[`SKEW_MAP > should export complete skew map 1`] = `
{
  "0": 0,
  "1": 1,
  "12": 12,
  "2": 2,
  "3": 3,
  "6": 6,
}
`;
